# KSU_HM

./: 34 앞뒤이동 파워포인트 웹브라우저.txt  Main.py  README.md  labels.txt  pyproject.toml  이미지 캡쳐 후 저장된 폴더 열기.py
Backup/: Main_2.py
Backup/2022.05.22/: gesture_train.py
Backup/2022.05.22/Data/: gesture_train_Jun.csv  labels.txt
Backup/2022.05.22/UI/: DialogTest.py  Window.py  Window.ui  wTraining.ui
Backup/2022.05.22/UI/backup/: Window.py  wTraining_1.py
Backup/2022.05.30/: gesture_train.py
Backup/2022.05.30/Data/: gesture_train.csv
Backup/2022.05.30/Tensorflow/: create_dataset.py  train.ipynb
Backup/2022.05.30/UI/backup/: Window.ui
eyes/: main.py  main_1.py
gest/: demo.py  inference.py
ksu_hm/: Main.py  gesture_train.py  wTraining.py  window2.py
ksu_hm/Data/: DataOutputWin.ui  gesture_train.csv  keras_model.h5  labels.txt  new_gesture_train.csv
ksu_hm/Data/backup/: gesture_train.csv  gesture_train_hyun.csv
ksu_hm/Tensorflow/: KSU_model.h5  train.ipynb
ksu_hm/Tensorflow/dataset/: raw_left_1653402855.npy  raw_left_1655020946.npy  raw_right_1653402855.npy  raw_right_1655020946.npy  raw_zoomin_1653402855.npy  raw_zoomin_1655020946.npy
ksu_hm/UI/: DataOutputWin.py  DataOutputWin.ui  Window.py  Window.ui  __init__.py  wTraining.py  wTraining.ui
ksu_hm/UI/backup/: wTraining_1.ui
ksu_hm/backup/: Main.py
