[tool.poetry]
name = "KSU-HM"
version = "0.1.0"
description = ""
authors = ["KimRiHyun <lookau1004@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.3"
mediapipe = "^0.8.9"
opencv-python = "^4.5.5"
PyQt5 = "^5.15.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
